// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapStateToProps returns the right keys 1`] = `
Object {
  "canModerate": true,
  "community": SessionBoundModel {
    "_fields": Object {
      "id": "99",
      "slug": "foo",
    },
  },
  "currentUser": SessionBoundModel {
    "_fields": Object {
      "id": "1",
    },
    "id": "1",
  },
  "slug": "foo",
}
`;

exports[`mergeProps merges the props 1`] = `
Object {
  "graphql": Object {
    "query": "query ($slug: String) {
        community (slug: $slug) {
          id
          name
          slug
          avatarUrl
          bannerUrl
          description
          location
          settings
          invitePath
          hidden
          allowCommunityInvites
          isPublic
          isAutoJoinable
          publicMemberDirectory
          pendingInvitations {
            hasMore
            items {
              id
              email
              createdAt
              lastSentAt
            }
          }
          moderators (first: 100) {
            hasMore
            items {
              id
              name
              avatarUrl
            }
          }
        }
      }",
    "variables": Object {
      "slug": "foo",
    },
  },
  "meta": Object {
    "extractModel": "Community",
  },
  "type": "CommunitySettings/FETCH_COMMUNITY_SETTINGS",
}
`;

exports[`mergeProps merges the props 2`] = `
Object {
  "graphql": Object {
    "query": "mutation ($id: ID, $changes: CommunityInput) {
        updateCommunitySettings(id: $id, changes: $changes) {
          id
        }
      }",
    "variables": Object {
      "changes": undefined,
      "id": "99",
    },
  },
  "meta": Object {
    "changes": undefined,
    "id": "99",
    "optimistic": true,
  },
  "type": "CommunitySettings/UPDATE_COMMUNITY_SETTINGS",
}
`;

exports[`mergeProps merges the props 3`] = `
Object {
  "canModerate": true,
  "community": SessionBoundModel {
    "_fields": Object {
      "id": "99",
      "slug": "foo",
    },
  },
  "currentUser": SessionBoundModel {
    "_fields": Object {
      "id": "1",
    },
    "id": "1",
  },
  "deleteCommunity": [Function],
  "fetchCommunitySettings": [Function],
  "fetchCommunitySettingsMaker": [Function],
  "goToCommunityDeleteConfirmation": [Function],
  "slug": "foo",
  "updateCommunitySettings": [Function],
  "updateCommunitySettingsMaker": [Function],
}
`;
